--- a/styles/global.css
+++ b/styles/global.css
@@ -3,6 +3,17 @@
   color-scheme: dark;
 }
 
+/* Transitions */
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity 0.3s ease;
+}
+
+.fade-enter-from,
+.fade-leave-to {
+  opacity: 0;
+}
+
 /* Color Mode transition */
 ::view-transition-old(root),
 ::view-transition-new(root) {
